Fix nav button width on mobile.

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -104,6 +104,10 @@
 			li {
 				padding-left: 0;
 				border-left: solid _size(border-width) _palette(border);
+                button {
+                    width: 100%;
+                    height: 100%;
+                }
 				&:first-child {
 					border-left: 0;
 				}
